--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,9 @@ body {
   box-shadow: 0 0 20px white;
   background-color: grey;
 }
+ 
+@media (min-width: 500px) {
+    .container{
+      width: 100%;
+    }
+}
